<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="me.lovenery.a20161119_1.MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str1"
                android:textSize="24sp"
                android:textColor="@android:color/black" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/name" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/str2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textSize="24sp"
                android:textColor="@android:color/black" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:text="@string/str4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton2"
                    android:layout_weight="1"
                    android:textSize="14sp" />

                <RadioButton
                    android:text="@string/str5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton"
                    android:layout_weight="1" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/str3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textSize="24sp"
                android:textColor="@android:color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox
                android:text="@string/str6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cBox1" />

            <CheckBox
                android:text="@string/str7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cBox2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox
                android:text="@string/str8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cBox3" />

            <CheckBox
                android:text="@string/str9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cBox4" />
        </TableRow>
    </TableLayout>

    <Button
        android:text="@string/str10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button" />
</LinearLayout>
